Allow display intervals > 25 seconds. Fixes PR/36999 I did contemplate chaging curses - but the code is replicated and warped.